[gd_scene load_steps=4 format=2]

[ext_resource path="res://level_editor/LevelEditor.gd" type="Script" id=1]
[ext_resource path="res://DefaultTheme.tres" type="Theme" id=2]
[ext_resource path="res://DefaultTiles.tres" type="TileSet" id=3]

[node name="LevelEditor" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 512.0
margin_bottom = 300.0
color = Color( 0.133333, 0.235294, 0.321569, 1 )

[node name="TileMaps" type="Node2D" parent="."]

[node name="Pen" type="Sprite" parent="."]
modulate = Color( 2, 2, 2, 0.5 )
centered = false

[node name="PickerBackground" type="ColorRect" parent="."]
visible = false
margin_right = 512.0
margin_bottom = 300.0
color = Color( 0.133333, 0.235294, 0.321569, 1 )

[node name="Picker" type="TileMap" parent="."]
visible = false
tile_set = ExtResource( 3 )
cell_size = Vector2( 24, 24 )
format = 1

[node name="MenuButton" type="Button" parent="."]
margin_left = 226.0
margin_top = 284.0
margin_right = 286.0
margin_bottom = 299.0
theme = ExtResource( 2 )
text = "Menu (Esc)"
